fix footer overlap

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -76,6 +76,7 @@
 body {
   background-color: var(--light);
   font-family: 'Saira', sans-serif;
+  padding-bottom: 6vh;
 }
 
 .card {
